Sudah Mengerjakan Exercise 04

--- a/Exercise-04/04_Operators.ipynb
+++ b/Exercise-04/04_Operators.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,9 +152,7 @@
     "# strings\n",
     "str1 = \"Sekar\"\n",
     "str2 = \"Arum\"\n",
-    "# concat\n",
     "result = str1 + \" \" + str2\n",
-    "# output\n",
     "print(result)\n",
     "# Jangan hapus kode di bawah ini \n",
     "%reset -f"
@@ -171,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,9 +183,7 @@
    "source": [
     "# Kerjakan disini\n",
     "str = \"WK\"\n",
-    "# replicate\n",
     "result = str * 3\n",
-    "#output\n",
     "print(result)\n",
     "# Jangan hapus kode di bawah ini \n",
     "%reset -f"
@@ -412,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +416,7 @@
      "output_type": "stream",
      "text": [
       "a & b = 0\n",
-      "a | b = 0\n",
+      "a | b = 14\n",
       "~a = -11\n",
       "a ^ b = 14\n"
      ]
@@ -430,8 +426,9 @@
     "# Kerjakan disini\n",
     "a = 10\n",
     "b = 4\n",
+    "\n",
     "print(\"a & b =\", a & b)\n",
-    "print(\"a | b =\", a & b)\n",
+    "print(\"a | b =\", a | b)\n",
     "print(\"~a =\", ~a)\n",
     "print(\"a ^ b =\", a ^ b)\n",
     "# Jangan hapus kode di bawah ini \n",
@@ -456,28 +453,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anda dapat mendaftar di kursus.\n"
+      "Anda dapat mendaftar di kursus\n"
      ]
     }
    ],
    "source": [
     "#Buat kode disini\n",
     "Usia = int(input(\"Berapa usia anda? \"))\n",
-    "lulus_tes = input(\"Apakah anda lulus tes substansi (Y/T)? \")\n",
+    "Lulus_Tes = input(\"Apakah anda lulus tes substansi (Y/T)? \")\n",
     "if Usia >= 21 :\n",
-    "    if lulus_tes == \"Y\" :\n",
-    "        print(\"Anda dapat mendaftar di kursus.\")\n",
+    "    if Lulus_Tes == \"Y\" :\n",
+    "        print(\"Anda dapat mendaftar di kursus\")\n",
     "    else:\n",
-    "        print(\"Anda tidak dapat mendaftar di kursus.\")\n",
+    "        print(\"Anda tidak dapat mendaftar di kursus\")\n",
     "else:\n",
-    "    print(\"Anda tidak dapat mendaftar di kursus.\")"
+    "    print(\"Anda tidak dapat mendaftar di kursus\")"
    ]
   },
   {
