--- a/Exercise-09/09_Matriks.ipynb
+++ b/Exercise-09/09_Matriks.ipynb
@@ -20,13 +20,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[99, 99], [99, 99]]\n",
+      "[[91, 91], [91, 91]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = [[99, 99],\n",
     "     [99, 99]]\n",
     "\n",
     "B = [[91, 91],\n",
-    "     [91, 91]]"
+    "     [91, 91]]\n",
+    "\n",
+    "print(A)\n",
+    "print(B)"
    ]
   },
   {
@@ -47,21 +59,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1, 1], [1, 1]], [[1, 1], [1, 1]]]\n",
-      "[[[1, 1], [1, 1]], [[1, 1], [1, 1]]]\n"
+      "[[99, 99], [99, 99]]\n",
+      "[[91, 91], [91, 91]]\n"
      ]
     }
    ],
    "source": [
     "def create(matriks, nim):\n",
-    "    m = 2\n",
-    "    n = 2\n",
-    "    x = [0]*m \n",
-    "    for i in range(m):\n",
-    "        for k in range(n):\n",
-    "            matriks[i][k] = [1]*n\n",
-    "create(A, None)\n",
-    "create(B, None)\n",
+    "    for i in range(2):\n",
+    "        for k in range(2):\n",
+    "            matriks[i][k] = nim\n",
+    "create(A, 99)\n",
+    "create(B, 91)\n",
     "\n",
     "print(A)\n",
     "print(B)"
@@ -79,32 +88,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 190 190 ]\n",
+      "[ 190 190 ]\n"
+     ]
+    }
+   ],
    "source": [
     "#SOAL-1\n",
-    "#YOUR CODE HERE"
+    "#YOUR CODE HERE\n",
+    "A = [[99, 99],\n",
+    "     [99, 99]]\n",
+    "\n",
+    "B = [[91, 91],\n",
+    "     [91, 91]]\n",
+    "\n",
+    "for x in range(len(A)):\n",
+    "    print(\"[\", end =\" \")\n",
+    "    for y in range(len(B)):\n",
+    "        mat = A[x][y] + B[x][y]\n",
+    "        print(mat, end=\" \")\n",
+    "    print(\"]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 8 8 ]\n",
+      "[ 8 8 ]\n"
+     ]
+    }
+   ],
    "source": [
     "#SOAL-2\n",
-    "#YOUR CODE HERE"
+    "#YOUR CODE HERE\n",
+    "A = [[99, 99],\n",
+    "     [99, 99]]\n",
+    "\n",
+    "B = [[91, 91],\n",
+    "     [91, 91]]\n",
+    "\n",
+    "for x in range(len(A)):\n",
+    "    print(\"[\", end =\" \")\n",
+    "    for y in range(len(B)):\n",
+    "        mat = A[x][y] - B[x][y]\n",
+    "        print(mat, end=\" \")\n",
+    "    print(\"]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 380 380 ]\n",
+      "[ 380 380 ]\n"
+     ]
+    }
+   ],
    "source": [
     "#SOAL-3\n",
-    "#YOUR CODE HERE"
+    "#YOUR CODE HERE\n",
+    "A = [[99, 99],\n",
+    "     [99, 99]]\n",
+    "\n",
+    "B = [[91, 91],\n",
+    "     [91, 91]]\n",
+    "    \n",
+    "C = []\n",
+    "\n",
+    "for x in range(0, len(A)):\n",
+    "    baris = []\n",
+    "    for y in range(0, len(A[0])):\n",
+    "        total=0\n",
+    "        for z in range(0, len(A)):\n",
+    "            total=total + (A[x][z] + B[z][y])\n",
+    "        baris.append(total)\n",
+    "    C.append(baris)\n",
+    "for x in range (0, len(C)):\n",
+    "    print(\"[\", end=\" \")\n",
+    "    for y in range(0, len(C[0])):\n",
+    "        print(C[x][y], end=\" \")\n",
+    "    print(\"]\")"
    ]
   },
   {
@@ -124,10 +205,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+   "hash": "b01e3e0a1058a7bb1d1e5c5024519bd969bf4d3bb4353a3e2b767f31ca4d24dd"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
