--- a/Exercise-10/10_File_dan_Direktori.ipynb
+++ b/Exercise-10/10_File_dan_Direktori.ipynb
@@ -17,12 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Engkau bahkan bukan lagi variabel bagiku\\n', 'Engkau adalah konstanta abadi yang tak tergantikan...']\n"
+     ]
+    }
+   ],
    "source": [
     "# Kerjakan disini\n",
-    "\n",
+    "file_puisi = open(\"./data/puisi.txt\",\"r\")\n",
+    "print(file_puisi.readlines())\n",
+    "file_puisi.close()\n",
     "# Jangan hapus kode di bawah ini \n",
     "%reset -f"
    ]
@@ -39,12 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Engkau bahkan bukan lagi variabel bagiku\n",
+      "Engkau adalah konstanta abadi yang tak tergantikan...\n"
+     ]
+    }
+   ],
    "source": [
     "# Kerjakan disini\n",
-    "\n",
+    "file_puisi = open(\"./data/puisi.txt\",\"r\")\n",
+    "puisi = file_puisi.read()\n",
+    "print(puisi)\n",
+    "file_puisi.close()\n",
     "# Jangan hapus kode di bawah ini \n",
     "%reset -f"
    ]
@@ -61,12 +83,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selamat Datang di Program Biodata\n",
+      "=================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Kerjakan disini\n",
+    "print(\"Selamat Datang di Program Biodata\")\n",
+    "print(\"=================================\")\n",
+    "nama = input(\"Nama: \")\n",
+    "umur = input(\"Umur: \")\n",
+    "alamat = input(\"Alamat: \")\n",
     "\n",
+    "teks = \"Nama: {}\\nUmur: {}\\nAlamat: {}\\n\".format(nama, umur, alamat)\n",
+    "file_bio = open(\"./data/biodata.txt\", \"w\")\n",
+    "file_bio.write(teks)\n",
+    "file_bio.close()\n",
     "# Jangan hapus kode di bawah ini \n",
     "%reset -f"
    ]
@@ -89,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selamat Datang di Program Biodata\n",
+      "=================================\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Selamat Datang di Program Biodata\")\n",
     "print(\"=================================\")\n",
@@ -135,11 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kerjakan disini\n"
+    "# Kerjakan disini\n",
+    "import os\n",
+    "def main():\n",
+    "    os.mkdir(\"contoh direktori\")\n",
+    "ifname = 'main'\n",
+    "main()\n",
+    "%reset -f"
    ]
   },
   {
@@ -161,11 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kerjakan disini\n"
+    "# Kerjakan disini\n",
+    "import os\n",
+    "def main():\n",
+    "    os.rename(\"contoh direktori\",\"renamed\")\n",
+    "ifname = 'main'\n",
+    "main()\n",
+    "%reset -f"
    ]
   },
   {
@@ -187,11 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Kerjakan disini\n"
+    "# Kerjakan disini\n",
+    "import os\n",
+    "def main():\n",
+    "    os.rmdir(\"renamed\")\n",
+    "ifname = 'main'\n",
+    "main()\n",
+    "%reset -f"
    ]
   },
   {
@@ -230,10 +297,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+   "hash": "b01e3e0a1058a7bb1d1e5c5024519bd969bf4d3bb4353a3e2b767f31ca4d24dd"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -247,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
