--- a/Exercise-11/11_Modul_Paket.ipynb
+++ b/Exercise-11/11_Modul_Paket.ipynb
@@ -29,11 +29,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Persegi Panjang\n",
+      "Panjang\t\t: 95\n",
+      "Lebar\t\t: 2\n",
+      "Luas\t\t: 190\n",
+      "Keliling\t: 194\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "from Data import Geometri2D\n",
+    "#PersegiPanjang\n",
+    "p = 95\n",
+    "l = 2\n",
+    "\n",
+    "Luas = Geometri2D.LuasPersegiPanjang(p,l)\n",
+    "Kel = Geometri2D.KelilingPersegiPanjang(p,l)\n",
+    "\n",
+    "print(\"Persegi Panjang\")\n",
+    "print(\"Panjang\\t\\t:\",p)\n",
+    "print(\"Lebar\\t\\t:\",l)\n",
+    "print(\"Luas\\t\\t:\", Luas)\n",
+    "print(\"Keliling\\t:\", Kel)\n"
    ]
   },
   {
@@ -50,11 +75,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Persegi Panjang\n",
+      "Panjang\t: 95\n",
+      "Lebar\t: 2\n",
+      "Luas\t: 190\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "from Data.Geometri2D import LuasPersegiPanjang\n",
+    "p = 95\n",
+    "l = 2\n",
+    "luas = LuasPersegiPanjang(p,l)\n",
+    "print(\"Persegi Panjang\")\n",
+    "print(\"Panjang\\t:\", p)\n",
+    "print(\"Lebar\\t:\",l)\n",
+    "print(\"Luas\\t:\", luas)"
    ]
   },
   {
@@ -72,11 +116,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Persegi Panjang\n",
+      "Panjang\t: 95\n",
+      "Lebar\t: 2\n",
+      "Luas\t: 190\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "from Data import Geometri2D as DuaD\n",
+    "p = 95\n",
+    "l = 2\n",
+    "luas = DuaD.LuasPersegiPanjang(p,l)\n",
+    "print(\"Persegi Panjang\")\n",
+    "print(\"Panjang\\t:\", p)\n",
+    "print(\"Lebar\\t:\",l)\n",
+    "print(\"Luas\\t:\", luas)"
    ]
   },
   {
@@ -93,11 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Persegi Panjang\n",
+      "Panjang\t: 95\n",
+      "Lebar\t: 2\n",
+      "Luas\t: 190\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "from Data.Geometri2D import LuasPersegiPanjang as LPP \n",
+    "p = 95\n",
+    "l = 2\n",
+    "luas = LPP(p,l)\n",
+    "print(\"Persegi Panjang\")\n",
+    "print(\"Panjang\\t:\", p)\n",
+    "print(\"Lebar\\t:\",l)\n",
+    "print(\"Luas\\t:\", luas)"
    ]
   },
   {
@@ -125,11 +207,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bujur Sangkar\n",
+      "Panjang sisi\t: 5\n",
+      "Luas\t\t: 25\n"
+     ]
+    }
+   ],
    "source": [
-    "# Kerjakan di sini\n"
+    "# Kerjakan di sini\n",
+    "import Data.Geometri2D\n",
+    "def main():\n",
+    "    sisi = 5\n",
+    "    luas = Data.Geometri2D.LuasBujurSangkar(sisi)\n",
+    "    print(\"Bujur Sangkar\")\n",
+    "    print(\"Panjang sisi\\t:\", sisi)\n",
+    "    print(\"Luas\\t\\t:\", luas)\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
@@ -145,10 +246,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "aaa2d32309aa7ce0f397d0e81903e050bd163767a22d0d109bd73d79b6cf4dfe"
+   "hash": "b01e3e0a1058a7bb1d1e5c5024519bd969bf4d3bb4353a3e2b767f31ca4d24dd"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -162,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
