--- a/Exercise-12/12 Penanganan Eksepsi Exercise.ipynb
+++ b/Exercise-12/12 Penanganan Eksepsi Exercise.ipynb
@@ -16,11 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "An Exception Occured\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "try:\n",
+    "    print(p)\n",
+    "except:\n",
+    "    print('An Exception Occured')"
    ]
   },
   {
@@ -34,11 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teknik\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "try:\n",
+    "    x = \"teknik\"\n",
+    "    print(x)\n",
+    "except:\n",
+    "    print(\"An exception occured\")"
    ]
   },
   {
@@ -52,11 +77,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anda mengetikan \"Haloo\"\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "try:\n",
+    "    teks = input('Ketikan sesuatu: ')\n",
+    "except EOFError:\n",
+    "    print('\\nKenapa sudah EOF?')\n",
+    "except KeyboardInterrupt:\n",
+    "    print('\\nAnda membatalkan operasi')\n",
+    "else:\n",
+    "    print('Anda mengetikan \"%s\"'%teks ) "
    ]
   },
   {
@@ -70,11 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anda mengetikan \"Good bye\"\n"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "try:\n",
+    "    teks = input('Ketikan sesuatu: ')\n",
+    "except EOFError:\n",
+    "    print('\\nKenapa sudah EOF?')\n",
+    "except KeyboardInterrupt:\n",
+    "    print('\\nAnda membatalkan operasi')\n",
+    "else:\n",
+    "    print('Anda mengetikan \"%s\"'%teks ) "
    ]
   },
   {
@@ -88,11 +145,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "File tidak ditemukan\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'f' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Praktikum Progama Komputer\\I0321095-Sekar-Prokom\\Exercise-12\\12 Penanganan Eksepsi Exercise.ipynb Cell 10'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=16'>17</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m tidak terdefinisi\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=17'>18</a>\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=18'>19</a>\u001b[0m     f\u001b[39m.\u001b[39mclose()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=19'>20</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mFile ditutup\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'f' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#kerjakan disini"
+    "#kerjakan disini\n",
+    "import time\n",
+    "\n",
+    "try:\n",
+    "    f = open('coba.txt')\n",
+    "    while True:\n",
+    "        baris = f.readline()\n",
+    "        if len(baris) == 0:\n",
+    "            break\n",
+    "        print(baris),\n",
+    "        time.sleep(2)\n",
+    "except KeyboardInterrupt:\n",
+    "    print('\\nAnda membatalkan operasi')\n",
+    "except FileNotFoundError:\n",
+    "    print('\\nFile tidak ditemukan')\n",
+    "except NameError:\n",
+    "    print('\"f\" tidak terdefinisi')\n",
+    "finally:\n",
+    "    f.close()\n",
+    "    print('\\nFile ditutup')"
    ]
   },
   {
@@ -108,7 +204,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "cd08f94adcf3cbae37fe85286256f4c2a10455ca9094fd053e9f3d3f09647223"
+   "hash": "b01e3e0a1058a7bb1d1e5c5024519bd969bf4d3bb4353a3e2b767f31ca4d24dd"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 64-bit",
