--- a/Exercise-12/12 Penanganan Eksepsi Exercise.ipynb
+++ b/Exercise-12/12 Penanganan Eksepsi Exercise.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
    "source": [
     "#kerjakan disini\n",
     "try:\n",
-    "    print(p)\n",
+    "    print(x)\n",
     "except:\n",
     "    print('An Exception Occured')"
    ]
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,18 +153,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "File tidak ditemukan\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'f' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Praktikum Progama Komputer\\I0321095-Sekar-Prokom\\Exercise-12\\12 Penanganan Eksepsi Exercise.ipynb Cell 10'\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=16'>17</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m tidak terdefinisi\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=17'>18</a>\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=18'>19</a>\u001b[0m     f\u001b[39m.\u001b[39mclose()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-12/12%20Penanganan%20Eksepsi%20Exercise.ipynb#ch0000009?line=19'>20</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mFile ditutup\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'f' is not defined"
+      "File ditutup\n"
      ]
     }
    ],
