Sudah mengerjakan Exercise 13

--- a/Exercise-13/13_GUI.ipynb
+++ b/Exercise-13/13_GUI.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,24 +229,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named '_____'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Praktikum Progama Komputer\\I0321095-Sekar-Prokom\\Exercise-13\\13_GUI.ipynb Cell 14'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-13/13_GUI.ipynb#ch0000013?line=0'>1</a>\u001b[0m \u001b[39m#kerjakan disini\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Praktikum%20Progama%20Komputer/I0321095-Sekar-Prokom/Exercise-13/13_GUI.ipynb#ch0000013?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39m_____\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named '_____'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\sekar\\AppData\\Local\\Programs\\Python\\Python39\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\sekar\\AppData\\Local\\Temp\\ipykernel_34136\\789866990.py\", line 17, in getchoice\n",
+      "    if var2.get() == 1: pilihan(\"Olahraga\")\n",
+      "TypeError: 'list' object is not callable\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\sekar\\AppData\\Local\\Programs\\Python\\Python39\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\sekar\\AppData\\Local\\Temp\\ipykernel_34136\\789866990.py\", line 17, in getchoice\n",
+      "    if var2.get() == 1: pilihan(\"Olahraga\")\n",
+      "TypeError: 'list' object is not callable\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\sekar\\AppData\\Local\\Programs\\Python\\Python39\\lib\\tkinter\\__init__.py\", line 1892, in __call__\n",
+      "    return self.func(*args)\n",
+      "  File \"C:\\Users\\sekar\\AppData\\Local\\Temp\\ipykernel_34136\\789866990.py\", line 18, in getchoice\n",
+      "    if var3.get() == 1: pilihan(\"Membaca\")\n",
+      "TypeError: 'list' object is not callable\n"
      ]
     }
    ],
    "source": [
     "#kerjakan disini\n",
-    "import _____\n"
+    "import tkinter\n",
+    "import tkinter.messagebox\n",
+    "\n",
+    "def main():\n",
+    "    mainform = tkinter.Tk()\n",
+    "    mainform.title(\"Demo Button\")\n",
+    "    mainform.geometry(\"280x200\")\n",
+    "\n",
+    "    var1 = tkinter.IntVar()\n",
+    "    var2 = tkinter.IntVar()\n",
+    "    var3 = tkinter.IntVar()\n",
+    "\n",
+    "    def getchoice():\n",
+    "        pilihan = [];\n",
+    "        if var1.get() == 1: pilihan.append(\"Musik\")\n",
+    "        if var2.get() == 1: pilihan.append(\"Olahraga\")\n",
+    "        if var3.get() == 1: pilihan.append(\"Membaca\")\n",
+    "        tkinter.messagebox.showinfo(\"informasi\", str(pilihan))\n",
+    "\n",
+    "    I = tkinter.Label(mainform, text= \"Hobi Anda (pilih salah satu): \")\n",
+    "    I.grid(row=0, sticky=tkinter.W)\n",
+    "\n",
+    "    c1 = tkinter.Checkbutton (mainform, variable = var1, text=\"Musik\")\n",
+    "    c1.grid(row=1, sticky=tkinter.W)\n",
+    "\n",
+    "    c1 = tkinter.Checkbutton (mainform, variable = var2, text=\"Olahraga\")\n",
+    "    c1.grid(row=2, sticky=tkinter.W)\n",
+    "\n",
+    "    c1 = tkinter.Checkbutton (mainform, variable = var3, text=\"Membaca\")\n",
+    "    c1.grid(row=3, sticky=tkinter.W)\n",
+    "\n",
+    "    b1 = tkinter.Button(mainform, text=\"OK\", command=getchoice, width=10)\n",
+    "    b1.grid(row=4, sticky=tkinter.W, padx=4, pady=4)\n",
+    "\n",
+    "    b1 = tkinter.Button(mainform, text=\"Keluar\", command=quit, width=10)\n",
+    "    b1.grid(row=4, sticky=tkinter.W, padx=90, pady=4)\n",
+    "\n",
+    "    mainform.mainloop()\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n",
+    "    \n"
    ]
   },
   {
@@ -262,12 +318,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#kerjakan disini\n",
-    "import _____\n"
+    "import tkinter\n",
+    "import tkinter.messagebox\n",
+    "\n",
+    "def main():\n",
+    "    mainform = tkinter.Tk()\n",
+    "    mainform.title(\"Demo Button\")\n",
+    "    mainform.geometry(\"155x100\")\n",
+    "\n",
+    "    var1 = tkinter.StringVar()\n",
+    "    var1.set(\"Python...\")\n",
+    "    def kosongkan():\n",
+    "        var1.set(\"\")\n",
+    "    def ambilteks():\n",
+    "        tkinter.messagebox.showinfo(\"informasi\", var1.get())\n",
+    "    l = tkinter.Label(mainform, text= \"Masukkan teks: \")\n",
+    "    l.grid(row=0, column=0, columnspan=2, sticky=tkinter.W+tkinter.E, padx=4, pady=4)\n",
+    "\n",
+    "    e = tkinter.Entry(mainform, textvariable=var1)\n",
+    "    e.grid(row=1, column=0, columnspan=2, sticky=tkinter.W+tkinter.E, padx=4, pady=4)\n",
+    "\n",
+    "    b1 = tkinter.Button(mainform, text=\"Kosongkan\", command=kosongkan)\n",
+    "    b1.grid(row=2, column=0, padx=4, pady=4)\n",
+    "    b2 = tkinter.Button(mainform, text=\"Ambil teks\", command=ambilteks)\n",
+    "    b2.grid(row=2, column=1, padx=4, pady=4)\n",
+    "\n",
+    "    mainform.mainloop()\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
